# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.

cmake_minimum_required (VERSION 3.5)
project (LIBGTO_D1_KIT VERSION 0.1 LANGUAGES CXX)

set (HDRS
    include/gto_d1_kit/gto_d1.hpp
    include/gto_d1_kit/gto_d1_kit.hpp)

set (SRCS
    src/d_ee_ddpp_B0.ey.cpp
    src/d_ee_ddpp_B1.ey.cpp
    src/d_ee_ddpp_B2.ey.cpp
    src/d_ee_ddpp_B3.ey.cpp
    src/d_ee_ddpp_B4.ey.cpp
    src/d_ee_ddpp_B5.ey.cpp
    src/d_ee_pppp_C0.ey.cpp
    src/d_ne_ds_B0.ey.cpp
    src/d_ne_dp_A0.ey.cpp
    src/d_ee_dpps_C0.ey.cpp
    src/d_ee_dpps_C1.ey.cpp
    src/d_ee_dpps_C2.ey.cpp
    src/d_ee_dpps_C3.ey.cpp
    src/d_ee_dpps_C4.ey.cpp
    src/d_ee_dpps_C5.ey.cpp
    src/d_ee_dpps_C6.ey.cpp
    src/d_ee_dpps_C7.ey.cpp
    src/d_ee_dpps_C8.ey.cpp
    src/d_ee_dpps_C9.ey.cpp
    src/d_ee_dpps_C10.ey.cpp
    src/d_ne_dp_B0.ey.cpp
    src/d_ne_sp_C0.ey.cpp
    src/d_ee_psss_D0.ey.cpp
    src/d_ee_ddds_B0.ey.cpp
    src/d_ee_dppp_C0.ey.cpp
    src/d_ee_dppp_C1.ey.cpp
    src/d_ee_dppp_C2.ey.cpp
    src/d_ee_dppp_C3.ey.cpp
    src/d_ee_dppp_C4.ey.cpp
    src/d_ee_dppp_C5.ey.cpp
    src/d_ee_ddds_A0.ey.cpp
    src/d_ee_ddds_A1.ey.cpp
    src/d_ee_ddds_A2.ey.cpp
    src/d_ee_ddds_A3.ey.cpp
    src/d_ee_ddds_A4.ey.cpp
    src/d_ee_ddds_A5.ey.cpp
    src/d_ne_pp_C0.ey.cpp
    src/d_ne_ps_B0.ey.cpp
    src/d_ne_ps_A0.ey.cpp
    src/d_kinetic0.ey.cpp
    src/d_kinetic1.ey.cpp
    src/d_kinetic2.ey.cpp
    src/d_kinetic3.ey.cpp
    src/d_kinetic4.ey.cpp
    src/d_kinetic5.ey.cpp
    src/d_kinetic6.ey.cpp
    src/d_kinetic7.ey.cpp
    src/d_kinetic8.ey.cpp
    src/d_kinetic9.ey.cpp
    src/d_kinetic10.ey.cpp
    src/d_kinetic11.ey.cpp
    src/d_kinetic12.ey.cpp
    src/d_kinetic13.ey.cpp
    src/d_kinetic14.ey.cpp
    src/d_kinetic15.ey.cpp
    src/d_ne_ss_A0.ey.cpp
    src/d_ee_dddd_A0.ey.cpp
    src/d_ee_dddd_A1.ey.cpp
    src/d_ee_dddd_A2.ey.cpp
    src/d_ee_dddd_A3.ey.cpp
    src/d_ee_dddd_A4.ey.cpp
    src/d_ee_dddd_A5.ey.cpp
    src/d_ee_dpss_B0.ey.cpp
    src/d_ee_dpss_B1.ey.cpp
    src/d_ee_dpss_B2.ey.cpp
    src/d_ee_dpss_B3.ey.cpp
    src/d_ee_dpss_B4.ey.cpp
    src/d_ee_dpss_B5.ey.cpp
    src/d_ee_dpss_B6.ey.cpp
    src/d_ee_dpss_B7.ey.cpp
    src/d_ee_dpss_B8.ey.cpp
    src/d_ee_dpss_B9.ey.cpp
    src/d_ee_dpss_B10.ey.cpp
    src/d_ee_ppps_A0.ey.cpp
    src/d_ee_ppps_A1.ey.cpp
    src/d_ee_ppps_A2.ey.cpp
    src/d_ee_ppps_A3.ey.cpp
    src/d_ee_ppps_A4.ey.cpp
    src/d_ee_ppps_A5.ey.cpp
    src/d_ee_dddd_D0.ey.cpp
    src/d_ee_ddps_B0.ey.cpp
    src/d_ee_ddps_B1.ey.cpp
    src/d_ee_ddps_B2.ey.cpp
    src/d_ee_ddps_B3.ey.cpp
    src/d_ee_ddps_B4.ey.cpp
    src/d_ee_ddps_B5.ey.cpp
    src/d_ne_dd_B0.ey.cpp
    src/d_ee_dddp_D0.ey.cpp
    src/d_ee_dddp_D1.ey.cpp
    src/d_ee_dddp_D2.ey.cpp
    src/d_ee_dddp_D3.ey.cpp
    src/d_ee_dddp_D4.ey.cpp
    src/d_ee_dddp_D5.ey.cpp
    src/d_ne_dd_A0.ey.cpp
    src/d_ne_pp_A0.ey.cpp
    src/d_ee_dddp_A0.ey.cpp
    src/d_ee_dddp_A1.ey.cpp
    src/d_ee_dddp_A2.ey.cpp
    src/d_ee_dddp_A3.ey.cpp
    src/d_ee_dddp_A4.ey.cpp
    src/d_ee_dddp_A5.ey.cpp
    src/d_ee_ppps_C0.ey.cpp
    src/d_ee_ppps_C1.ey.cpp
    src/d_ee_ppps_C2.ey.cpp
    src/d_ee_ppps_C3.ey.cpp
    src/d_ee_ppps_C4.ey.cpp
    src/d_ee_ppps_C5.ey.cpp
    src/d_ee_dpps_A0.ey.cpp
    src/d_ee_dpps_A1.ey.cpp
    src/d_ee_dpps_A2.ey.cpp
    src/d_ee_dpps_A3.ey.cpp
    src/d_ee_dpps_A4.ey.cpp
    src/d_ee_dpps_A5.ey.cpp
    src/d_ee_dpps_A6.ey.cpp
    src/d_ee_dpps_A7.ey.cpp
    src/d_ee_dpps_A8.ey.cpp
    src/d_ee_dpps_A9.ey.cpp
    src/d_ee_dpps_A10.ey.cpp
    src/d_ee_ppps_B0.ey.cpp
    src/d_ee_ddps_A0.ey.cpp
    src/d_ee_ddps_A1.ey.cpp
    src/d_ee_ddps_A2.ey.cpp
    src/d_ee_ddps_A3.ey.cpp
    src/d_ee_ddps_A4.ey.cpp
    src/d_ee_ddps_A5.ey.cpp
    src/d_ee_ddps_A6.ey.cpp
    src/d_ee_ddps_A7.ey.cpp
    src/d_ee_ddps_A8.ey.cpp
    src/d_ee_ddps_A9.ey.cpp
    src/d_ee_ddps_A10.ey.cpp
    src/d_ee_psss_B0.ey.cpp
    src/d_ee_psss_B1.ey.cpp
    src/d_ee_psss_B2.ey.cpp
    src/d_ee_psss_B3.ey.cpp
    src/d_ee_psss_B4.ey.cpp
    src/d_ee_psss_B5.ey.cpp
    src/d_ne_ps_C0.ey.cpp
    src/d_ne_ds_C0.ey.cpp
    src/d_ee_ddpp_D0.ey.cpp
    src/d_ee_dpss_D0.ey.cpp
    src/d_ee_dpss_D1.ey.cpp
    src/d_ee_dpss_D2.ey.cpp
    src/d_ee_dpss_D3.ey.cpp
    src/d_ee_dpss_D4.ey.cpp
    src/d_ee_dpss_D5.ey.cpp
    src/d_ne_sd_C0.ey.cpp
    src/d_ee_ddds_D0.ey.cpp
    src/d_ee_ddds_D1.ey.cpp
    src/d_ee_ddds_D2.ey.cpp
    src/d_ee_ddds_D3.ey.cpp
    src/d_ee_ddds_D4.ey.cpp
    src/d_ee_ddds_D5.ey.cpp
    src/d_ee_dsss_A0.ey.cpp
    src/d_ee_dsss_A1.ey.cpp
    src/d_ee_dsss_A2.ey.cpp
    src/d_ee_dsss_A3.ey.cpp
    src/d_ee_dsss_A4.ey.cpp
    src/d_ee_dsss_A5.ey.cpp
    src/d_ee_ddpp_A0.ey.cpp
    src/d_ee_ddpp_A1.ey.cpp
    src/d_ee_ddpp_A2.ey.cpp
    src/d_ee_ddpp_A3.ey.cpp
    src/d_ee_ddpp_A4.ey.cpp
    src/d_ee_ddpp_A5.ey.cpp
    src/d_ee_ddpp_A6.ey.cpp
    src/d_ee_ddpp_A7.ey.cpp
    src/d_ee_ddpp_A8.ey.cpp
    src/d_ee_ddpp_A9.ey.cpp
    src/d_ee_ddpp_A10.ey.cpp
    src/d_ee_pppp_B0.ey.cpp
    src/d_ee_psss_C0.ey.cpp
    src/d_ee_psss_C1.ey.cpp
    src/d_ee_psss_C2.ey.cpp
    src/d_ee_psss_C3.ey.cpp
    src/d_ee_psss_C4.ey.cpp
    src/d_ee_psss_C5.ey.cpp
    src/d_ee_ddps_D0.ey.cpp
    src/d_ee_ddps_D1.ey.cpp
    src/d_ee_ddps_D2.ey.cpp
    src/d_ee_ddps_D3.ey.cpp
    src/d_ee_ddps_D4.ey.cpp
    src/d_ee_ddps_D5.ey.cpp
    src/d_ee_ddps_D6.ey.cpp
    src/d_ee_ddps_D7.ey.cpp
    src/d_ee_ddps_D8.ey.cpp
    src/d_ee_ddps_D9.ey.cpp
    src/d_ee_ddps_D10.ey.cpp
    src/d_ne_dd_C0.ey.cpp
    src/d_ee_dppp_D0.ey.cpp
    src/d_ee_dpss_A0.ey.cpp
    src/d_ee_dpss_A1.ey.cpp
    src/d_ee_dpss_A2.ey.cpp
    src/d_ee_dpss_A3.ey.cpp
    src/d_ee_dpss_A4.ey.cpp
    src/d_ee_dpss_A5.ey.cpp
    src/d_ee_dpss_A6.ey.cpp
    src/d_ee_dpss_A7.ey.cpp
    src/d_ee_dpss_A8.ey.cpp
    src/d_ee_dpss_A9.ey.cpp
    src/d_ee_dpss_A10.ey.cpp
    src/d_ee_dpps_B0.ey.cpp
    src/d_ee_dpps_B1.ey.cpp
    src/d_ee_dpps_B2.ey.cpp
    src/d_ee_dpps_B3.ey.cpp
    src/d_ee_dpps_B4.ey.cpp
    src/d_ee_dpps_B5.ey.cpp
    src/d_ee_dpps_B6.ey.cpp
    src/d_ee_dpps_B7.ey.cpp
    src/d_ee_dpps_B8.ey.cpp
    src/d_ee_dpps_B9.ey.cpp
    src/d_ee_dpps_B10.ey.cpp
    src/d_ee_ppps_D0.ey.cpp
    src/d_ee_ppps_D1.ey.cpp
    src/d_ee_ppps_D2.ey.cpp
    src/d_ee_ppps_D3.ey.cpp
    src/d_ee_ppps_D4.ey.cpp
    src/d_ee_ppps_D5.ey.cpp
    src/d_ee_ppss_C0.ey.cpp
    src/d_ee_ppss_C1.ey.cpp
    src/d_ee_ppss_C2.ey.cpp
    src/d_ee_ppss_C3.ey.cpp
    src/d_ee_ppss_C4.ey.cpp
    src/d_ee_ppss_C5.ey.cpp
    src/d_ee_dppp_B0.ey.cpp
    src/d_ee_dppp_B1.ey.cpp
    src/d_ee_dppp_B2.ey.cpp
    src/d_ee_dppp_B3.ey.cpp
    src/d_ee_dppp_B4.ey.cpp
    src/d_ee_dppp_B5.ey.cpp
    src/d_ne_ss_B0.ey.cpp
    src/d_ee_dddd_B0.ey.cpp
    src/d_ne_pd_B0.ey.cpp
    src/d_ee_ppss_B0.ey.cpp
    src/d_ee_ppss_B1.ey.cpp
    src/d_ee_ppss_B2.ey.cpp
    src/d_ee_ppss_B3.ey.cpp
    src/d_ee_ppss_B4.ey.cpp
    src/d_ee_ppss_B5.ey.cpp
    src/d_ee_ppss_D0.ey.cpp
    src/d_ee_dsss_B0.ey.cpp
    src/d_ee_dsss_B1.ey.cpp
    src/d_ee_dsss_B2.ey.cpp
    src/d_ee_dsss_B3.ey.cpp
    src/d_ee_dsss_B4.ey.cpp
    src/d_ee_dsss_B5.ey.cpp
    src/d_ee_ddss_B0.ey.cpp
    src/d_ee_ddss_B1.ey.cpp
    src/d_ee_ddss_B2.ey.cpp
    src/d_ee_ddss_B3.ey.cpp
    src/d_ee_ddss_B4.ey.cpp
    src/d_ee_ddss_B5.ey.cpp
    src/d_ee_pppp_D0.ey.cpp
    src/d_ne_ss_C0.ey.cpp
    src/d_ne_pd_C0.ey.cpp
    src/d_ee_ddss_D0.ey.cpp
    src/d_ne_sp_A0.ey.cpp
    src/d_ne_sd_B0.ey.cpp
    src/d_ee_ddss_C0.ey.cpp
    src/d_ee_ddss_C1.ey.cpp
    src/d_ee_ddss_C2.ey.cpp
    src/d_ee_ddss_C3.ey.cpp
    src/d_ee_ddss_C4.ey.cpp
    src/d_ee_ddss_C5.ey.cpp
    src/d_ne_dp_C0.ey.cpp
    src/d_ee_dppp_A0.ey.cpp
    src/d_ee_dppp_A1.ey.cpp
    src/d_ee_dppp_A2.ey.cpp
    src/d_ee_dppp_A3.ey.cpp
    src/d_ee_dppp_A4.ey.cpp
    src/d_ee_dppp_A5.ey.cpp
    src/d_ne_sp_B0.ey.cpp
    src/d_ne_pp_B0.ey.cpp
    src/d_ne_pd_A0.ey.cpp
    src/d_ee_ddds_C0.ey.cpp
    src/d_ee_ddds_C1.ey.cpp
    src/d_ee_ddds_C2.ey.cpp
    src/d_ee_ddds_C3.ey.cpp
    src/d_ee_ddds_C4.ey.cpp
    src/d_ee_ddds_C5.ey.cpp
    src/d_ee_dsss_C0.ey.cpp
    src/d_ee_dsss_C1.ey.cpp
    src/d_ee_dsss_C2.ey.cpp
    src/d_ee_dsss_C3.ey.cpp
    src/d_ee_dsss_C4.ey.cpp
    src/d_ee_dsss_C5.ey.cpp
    src/d_ne_ds_A0.ey.cpp
    src/d_overlap0.ey.cpp
    src/d_overlap1.ey.cpp
    src/d_overlap2.ey.cpp
    src/d_overlap3.ey.cpp
    src/d_overlap4.ey.cpp
    src/d_overlap5.ey.cpp
    src/d_overlap6.ey.cpp
    src/d_overlap7.ey.cpp
    src/d_overlap8.ey.cpp
    src/d_overlap9.ey.cpp
    src/d_overlap10.ey.cpp
    src/d_overlap11.ey.cpp
    src/d_overlap12.ey.cpp
    src/d_overlap13.ey.cpp
    src/d_overlap14.ey.cpp
    src/d_overlap15.ey.cpp
    src/d_ee_dddp_B0.ey.cpp
    src/d_ee_ssss0.ey.cpp
    src/d_ee_ssss1.ey.cpp
    src/d_ee_ssss2.ey.cpp
    src/d_ee_ssss3.ey.cpp
    src/d_ee_ssss4.ey.cpp
    src/d_ee_ssss5.ey.cpp
    src/d_ee_ssss6.ey.cpp
    src/d_ee_ssss7.ey.cpp
    src/d_ee_ppss_A0.ey.cpp
    src/d_ee_ppss_A1.ey.cpp
    src/d_ee_ppss_A2.ey.cpp
    src/d_ee_ppss_A3.ey.cpp
    src/d_ee_ppss_A4.ey.cpp
    src/d_ee_ppss_A5.ey.cpp
    src/d_ee_ppss_A6.ey.cpp
    src/d_ee_ppss_A7.ey.cpp
    src/d_ee_ppss_A8.ey.cpp
    src/d_ee_ppss_A9.ey.cpp
    src/d_ee_ppss_A10.ey.cpp
    src/d_ee_dsss_D0.ey.cpp
    src/d_ee_dddd_C0.ey.cpp
    src/d_ee_ddss_A0.ey.cpp
    src/d_ee_ddss_A1.ey.cpp
    src/d_ee_ddss_A2.ey.cpp
    src/d_ee_ddss_A3.ey.cpp
    src/d_ee_ddss_A4.ey.cpp
    src/d_ee_ddss_A5.ey.cpp
    src/d_ee_ddss_A6.ey.cpp
    src/d_ee_ddss_A7.ey.cpp
    src/d_ee_ddss_A8.ey.cpp
    src/d_ee_ddss_A9.ey.cpp
    src/d_ee_ddss_A10.ey.cpp
    src/d_ee_psss_A0.ey.cpp
    src/d_ee_psss_A1.ey.cpp
    src/d_ee_psss_A2.ey.cpp
    src/d_ee_psss_A3.ey.cpp
    src/d_ee_psss_A4.ey.cpp
    src/d_ee_psss_A5.ey.cpp
    src/d_ee_ddpp_C0.ey.cpp
    src/d_ee_ddpp_C1.ey.cpp
    src/d_ee_ddpp_C2.ey.cpp
    src/d_ee_ddpp_C3.ey.cpp
    src/d_ee_ddpp_C4.ey.cpp
    src/d_ee_ddpp_C5.ey.cpp
    src/d_ee_pppp_A0.ey.cpp
    src/d_ee_pppp_A1.ey.cpp
    src/d_ee_pppp_A2.ey.cpp
    src/d_ee_pppp_A3.ey.cpp
    src/d_ee_pppp_A4.ey.cpp
    src/d_ee_pppp_A5.ey.cpp
    src/d_ee_dddp_C0.ey.cpp
    src/d_ee_dddp_C1.ey.cpp
    src/d_ee_dddp_C2.ey.cpp
    src/d_ee_dddp_C3.ey.cpp
    src/d_ee_dddp_C4.ey.cpp
    src/d_ee_dddp_C5.ey.cpp
    src/d_ee_ddps_C0.ey.cpp
    src/d_ee_ddps_C1.ey.cpp
    src/d_ee_ddps_C2.ey.cpp
    src/d_ee_ddps_C3.ey.cpp
    src/d_ee_ddps_C4.ey.cpp
    src/d_ee_ddps_C5.ey.cpp
    src/d_ee_ddps_C6.ey.cpp
    src/d_ee_ddps_C7.ey.cpp
    src/d_ee_ddps_C8.ey.cpp
    src/d_ee_ddps_C9.ey.cpp
    src/d_ee_ddps_C10.ey.cpp
    src/d_ee_dpps_D0.ey.cpp
    src/d_ee_dpps_D1.ey.cpp
    src/d_ee_dpps_D2.ey.cpp
    src/d_ee_dpps_D3.ey.cpp
    src/d_ee_dpps_D4.ey.cpp
    src/d_ee_dpps_D5.ey.cpp
    src/d_ee_dpss_C0.ey.cpp
    src/d_ee_dpss_C1.ey.cpp
    src/d_ee_dpss_C2.ey.cpp
    src/d_ee_dpss_C3.ey.cpp
    src/d_ee_dpss_C4.ey.cpp
    src/d_ee_dpss_C5.ey.cpp
    src/d_ee_dpss_C6.ey.cpp
    src/d_ee_dpss_C7.ey.cpp
    src/d_ee_dpss_C8.ey.cpp
    src/d_ee_dpss_C9.ey.cpp
    src/d_ee_dpss_C10.ey.cpp
    src/d_ne_sd_A0.ey.cpp
    src/gto_d1.cpp
    src/gto_d1_driver.cpp)

add_library (gto_d1_kit ${SRCS} ${HDRS})

target_include_directories (gto_d1_kit PUBLIC include)
enable_testing ()
add_subdirectory (test)
